include/El/lapack_like/factor.py


lib.ElGQRExplicitTriang_s.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriang_s.restype = c_uint
lib.ElGQRExplicitTriang_d.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriang_d.restype = c_uint
lib.ElGQRExplicitTriang_c.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriang_c.restype = c_uint
lib.ElGQRExplicitTriang_z.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriang_z.restype = c_uint
lib.ElGQRExplicitTriangDist_s.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriangDist_s.restype = c_uint
lib.ElGQRExplicitTriangDist_d.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriangDist_d.restype = c_uint
lib.ElGQRExplicitTriangDist_c.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriangDist_c.restype = c_uint
lib.ElGQRExplicitTriangDist_z.argtypes = [c_void_p,c_void_p]
lib.ElGQRExplicitTriangDist_z.restype = c_uint

def GQR(A,B,factType=GQR_IMPLICIT):
  if type(A) is Matrix:
    if factType == GQR_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElGQR_s(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == dTag: lib.ElGQR_d(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == cTag: lib.ElGQR_c(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == zTag: lib.ElGQR_z(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      else: raise Exception('Unsupported datatype')
      return tA, dA, tB, dB
    elif factType == GQR_EXPLICIT:
      raise Exception('GQR_EXPLICIT not yet supported')
    elif factType == GQR_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      if   A.tag == sTag: lib.ElGQRExplicitTriang_s(A.obj,B.obj)
      elif A.tag == dTag: lib.ElGQRExplicitTriang_d(A.obj,B.obj)
      elif A.tag == cTag: lib.ElGQRExplicitTriang_c(A.obj,B.obj)
      elif A.tag == zTag: lib.ElGQRExplicitTriang_z(A.obj,B.obj)
      else: raise Exception('Unsupported datatype')
      return B
    elif factType == GQR_EXPLICIT_UNITARY:
      raise Exception('GQR_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GQR factorization type')
  elif type(A) is DistMatrix:
    if factType == GQR_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElGQRDist_s(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == dTag: lib.ElGQRDist_d(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == cTag: lib.ElGQRDist_c(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == zTag: lib.ElGQRDist_z(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      else: raise Exception('Unsupported datatype')
      return tA, dA, tB, dB
    elif factType == GQR_EXPLICIT:
      raise Exception('GQR_EXPLICIT not yet supported')
    elif factType == GQR_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      if   A.tag == sTag: lib.ElGQRExplicitTriangDist_s(A.obj,B.obj)
      elif A.tag == dTag: lib.ElGQRExplicitTriangDist_d(A.obj,B.obj)
      elif A.tag == cTag: lib.ElGQRExplicitTriangDist_c(A.obj,B.obj)
      elif A.tag == zTag: lib.ElGQRExplicitTriangDist_z(A.obj,B.obj)
      else: raise Exception('Unsupported datatype')
      return B
    elif factType == GQR_EXPLICIT_UNITARY:
      raise Exception('GQR_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GQR factorization type')
  else: raise Exception('Unsupported matrix type')

# Generalized RQ factorization
# ============================
(GRQ_IMPLICIT,GRQ_EXPLICIT,GRQ_EXPLICIT_TRIANG,GRQ_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElGRQ_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQ_s.restype = c_uint
lib.ElGRQ_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQ_d.restype = c_uint
lib.ElGRQ_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQ_c.restype = c_uint
lib.ElGRQ_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQ_z.restype = c_uint
lib.ElGRQDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQDist_s.restype = c_uint
lib.ElGRQDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQDist_d.restype = c_uint
lib.ElGRQDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQDist_c.restype = c_uint
lib.ElGRQDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGRQDist_z.restype = c_uint

lib.ElGRQExplicitTriang_s.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriang_s.restype = c_uint
lib.ElGRQExplicitTriang_d.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriang_d.restype = c_uint
lib.ElGRQExplicitTriang_c.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriang_c.restype = c_uint
lib.ElGRQExplicitTriang_z.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriang_z.restype = c_uint
lib.ElGRQExplicitTriangDist_s.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriangDist_s.restype = c_uint
lib.ElGRQExplicitTriangDist_d.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriangDist_d.restype = c_uint
lib.ElGRQExplicitTriangDist_c.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriangDist_c.restype = c_uint
lib.ElGRQExplicitTriangDist_z.argtypes = [c_void_p,c_void_p]
lib.ElGRQExplicitTriangDist_z.restype = c_uint

def GRQ(A,B,factType=GRQ_IMPLICIT):
  if type(A) is Matrix:
    if factType == GRQ_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElGRQ_s(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == dTag: lib.ElGRQ_d(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == cTag: lib.ElGRQ_c(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == zTag: lib.ElGRQ_z(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      else: raise Exception('Unsupported datatype')
      return tA, dA, tB, dB
    elif factType == GRQ_EXPLICIT:
      raise Exception('GRQ_EXPLICIT not yet supported')
    elif factType == GRQ_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      if   A.tag == sTag: lib.ElGRQExplicitTriang_s(A.obj,B.obj)
      elif A.tag == dTag: lib.ElGRQExplicitTriang_d(A.obj,B.obj)
      elif A.tag == cTag: lib.ElGRQExplicitTriang_c(A.obj,B.obj)
      elif A.tag == zTag: lib.ElGRQExplicitTriang_z(A.obj,B.obj)
      else: raise Exception('Unsupported datatype')
      return B
    elif factType == GRQ_EXPLICIT_UNITARY:
      raise Exception('GRQ_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GRQ factorization type')
  elif type(A) is DistMatrix:
    if factType == GRQ_IMPLICIT:
      tA = Matrix(A.tag)
      dA = Matrix(Base(A.tag))
      tB = Matrix(A.tag)
      dB = Matrix(Base(A.tag))
      if   A.tag == sTag: lib.ElGRQDist_s(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == dTag: lib.ElGRQDist_d(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == cTag: lib.ElGRQDist_c(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      elif A.tag == zTag: lib.ElGRQDist_z(A.obj,tA.obj,dA.obj,tB.obj,dB.obj)
      else: raise Exception('Unsupported datatype')
      return tA, dA, tB, dB
    elif factType == GRQ_EXPLICIT:
      raise Exception('GRQ_EXPLICIT not yet supported')
    elif factType == GRQ_EXPLICIT_TRIANG:
      B = Matrix(A.tag)
      if   A.tag == sTag: lib.ElGRQExplicitTriangDist_s(A.obj,B.obj)
      elif A.tag == dTag: lib.ElGRQExplicitTriangDist_d(A.obj,B.obj)
      elif A.tag == cTag: lib.ElGRQExplicitTriangDist_c(A.obj,B.obj)
      elif A.tag == zTag: lib.ElGRQExplicitTriangDist_z(A.obj,B.obj)
      else: raise Exception('Unsupported datatype')
      return B
    elif factType == GRQ_EXPLICIT_UNITARY:
      raise Exception('GRQ_EXPLICIT_UNITARY not yet supported') 
    else: raise Exception('Unsupported GRQ factorization type')
  else: raise Exception('Unsupported matrix type')

# Interpolative decomposition
# ===========================
lib.ElID_s.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_s,bType]
lib.ElID_s.restype = c_uint
lib.ElID_d.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_d,bType]
lib.ElID_d.restype = c_uint
lib.ElID_c.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_s,bType]
lib.ElID_c.restype = c_uint
lib.ElID_z.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_d,bType]
lib.ElID_z.restype = c_uint
lib.ElIDDist_s.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_s,bType]
lib.ElIDDist_s.restype = c_uint
lib.ElIDDist_d.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_d,bType]
lib.ElIDDist_d.restype = c_uint
lib.ElIDDist_c.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_s,bType]
lib.ElIDDist_c.restype = c_uint
lib.ElIDDist_z.argtypes = [c_void_p,c_void_p,c_void_p,QRCtrl_d,bType]
lib.ElIDDist_z.restype = c_uint
def ID(A,ctrl,canOverwrite=False):
  if type(A) is Matrix: 
    p = Matrix(iTag)
    Z = Matrix(A.tag)
    if   A.tag == sTag: lib.ElID_s(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == dTag: lib.ElID_d(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == cTag: lib.ElID_c(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == zTag: lib.ElID_z(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    else: raise Exception('Unsupported datatype')
    return p, Z
  elif type(A) is DistMatrix:
    p = DistMatrix(iTag,MC,STAR,A.Grid())
    Z = DistMatrix(A.tag,STAR,VR,A.Grid())
    if   A.tag == sTag: lib.ElIDDist_s(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == dTag: lib.ElIDDist_d(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == cTag: lib.ElIDDist_c(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    elif A.tag == zTag: lib.ElIDDist_z(A.obj,p.obj,Z.obj,ctrl,canOverwrite)
    else: raise Exception('Unsupported datatype')
    return p, Z
  else: raise Exception('Unsupported matrix type')

# Skeleton decomposition
# ======================
lib.ElSkeleton_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElSkeleton_s.restype = c_uint
lib.ElSkeleton_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElSkeleton_d.restype = c_uint
lib.ElSkeleton_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElSkeleton_c.restype = c_uint
lib.ElSkeleton_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElSkeleton_z.restype = c_uint
lib.ElSkeletonDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElSkeletonDist_s.restype = c_uint
lib.ElSkeletonDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElSkeletonDist_d.restype = c_uint
lib.ElSkeletonDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]
lib.ElSkeletonDist_c.restype = c_uint
lib.ElSkeletonDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]
lib.ElSkeletonDist_z.restype = c_uint
def Skeleton(A,ctrl):
  if type(A) is Matrix:
    pR = Matrix(iTag)
    pC = Matrix(iTag)
    Z = Matrix(A.tag)
    if   A.tag == sTag: lib.ElSkeleton_s(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == dTag: lib.ElSkeleton_d(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == cTag: lib.ElSkeleton_c(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == zTag: lib.ElSkeleton_z(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    else: raise Exception('Unsupported datatype')
    return pR, pC, Z
  elif type(A) is DistMatrix:
    pR = DistMatrix(iTag,MC,STAR,A.Grid())
    pC = DistMatrix(iTag,MC,STAR,A.Grid())
    Z = DistMatrix(A.tag,STAR,VR,A.Grid())
    if   A.tag == sTag: lib.ElSkeletonDist_s(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == dTag: lib.ElSkeletonDist_d(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == cTag: lib.ElSkeletonDist_c(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    elif A.tag == zTag: lib.ElSkeletonDist_z(A.obj,pR.obj,pC.obj,Z.obj,ctrl)
    else: raise Exception('Unsupported datatype')
    return pR, pC, Z
  else: raise Exception('Unsupported matrix type')
